--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+* {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
 ul {
     list-style: none;
     display:flex;
@@ -10,6 +14,7 @@ ul {
     background-color: #1F2937;
     display: flex;
     justify-content: space-between;
+    margin:0;
 
 }
 
@@ -21,9 +26,45 @@ ul {
     margin-left: 150px;
 }
 
-.header-container ul li a {
+.header-container ul li a, .subtext {
     color: #E5E7EB;
     font-size:18px;
 
 }
 
+.header-content-container {
+    background-color:#1F2937;
+    display:flex;
+    justify-content: space-between;
+    padding: 36px 150px;
+    gap: 8px;
+    margin: 0;
+
+}
+
+.header-content-container img {
+    width: 300px;
+    height: auto;
+    /* margin-right: 150px; */
+}
+
+.content-header {
+    color: #F9FAF8;
+    font-weight: extra-bold;
+    font-size: 48px;
+    max-width: 400px;
+}
+
+.subtext {
+    max-width: 420px;
+    padding-bottom: 8px;
+}
+
+.header-content button {
+   background-color: #3882F6;
+   color: #F9FAF8;
+   border-radius: 4px;
+   border: none;
+   padding: 8px 16px;
+
+}
