--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 * {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 ul {
@@ -43,8 +43,10 @@ ul {
 }
 
 .header-content-container img {
-    width: 300px;
+    min-width: 300px;
     height: auto;
+    border-radius: 16px;
+    flex:0;
     /* margin-right: 150px; */
 }
 
@@ -67,4 +69,61 @@ ul {
    border: none;
    padding: 8px 16px;
 
+}
+
+.card img {
+    width: 125px;
+    height: 125px;
+    border-radius: 16px;
+    border: solid #3882F6;
+}
+
+.info-container .header1 {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 24px;
+}
+
+.cards {
+    display:flex;
+    gap: 16px;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 64px;
+
+}
+
+.card div {
+    width: 125px;
+    text-align: center;
+    color: grey;
+    font-size: 18px;
+}
+
+.quote-container {
+    background-color: #E5E7EB;
+    padding-top: 64px;
+    padding-bottom: 52px;
+}
+
+.quote {
+    width: 500px;
+    font-size: 32px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.quote-author {
+    width:500px;
+    color: #1F2937;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left:auto;
+    margin-right:auto;
+    text-align: right;
 }
