--- a/style.css
+++ b/style.css
@@ -43,10 +43,11 @@ ul {
 }
 
 .header-content-container img {
-    min-width: 300px;
+    width: 300px;
     height: auto;
     border-radius: 16px;
     flex:0;
+    align-self:center;
     /* margin-right: 150px; */
 }
 
@@ -126,4 +127,54 @@ ul {
     margin-left:auto;
     margin-right:auto;
     text-align: right;
+}
+
+.call > * {
+    color:#E5E7EB;
+    padding-top:0;
+    padding-bottom: 0;
+    margin:0;
+
+}
+
+.call-container {
+    background-color: #3882F6;
+    display:flex;
+    margin: 48px auto;
+    justify-content: space-between;
+    gap:32px;
+    width: max-content;
+    padding: 32px 128px;
+    border-radius:8px;
+    flex-wrap: wrap;
+}
+
+.call-container button {
+    align-self: center;
+    /* padding:0; */
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 4px;
+    border-color: #F9FAF8;
+    border-style: solid;
+    padding: 8px 16px;
+    
+
+}
+
+.call{
+    padding-right: 48px;
+    flex:1;
+}
+
+.footer {
+    background-color: #1F2937;
+    padding: 32px;
+}
+
+.footer div {
+    color: #F9FAF8;
+    font-size: 16px;
+    text-align: center;
+
 }
